--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   font-weight: normal; }
 @font-face {
   font-family: "URWGeometric-Medium";
-  src: url("../fonts/URWGeometric-Medium.ttf");
+  src: url("../fonts/URWGeometric-Medium.woff2");
   font-weight: 500; }
 @font-face {
   font-family: "URWGeometric-SemiBold";
@@ -16,7 +16,7 @@
   font-weight: 600; }
 @font-face {
   font-family: "URWGeometric-Bold";
-  src: url("../fonts/URWGeometric-Bold.ttf");
+  src: url("../fonts/URWGeometric-Bold.woff2");
   font-weight: bold; }
 * {
   outline: none !important; }
@@ -29,14 +29,13 @@ body {
   font-family: "URWGeometric-Regular", sans-serif;
   background-color: #FCFCFC;
   display: flex;
+  color: #2A2A2A;
   flex-direction: column;
   min-height: 100vh; }
 
 a {
   text-decoration: none !important;
   transition: 0.3s; }
-  a:hover {
-    opacity: 0.6; }
   a.black:hover {
     color: #000; }
 
@@ -57,13 +56,12 @@ input[type=number] {
   color: #EF6A82 !important; }
 
 .text-black {
-  color: #000 !important; }
+  color: #2A2A2A !important; }
 
 .navbar {
   padding: 12px 16px;
   background-color: #FFF;
-  border-bottom: 1px solid #C6C6C6;
-  box-shadow: 0px 0px 10px rgba(164, 164, 164, 0.15); }
+  box-shadow: 0px 0px 10px rgba(164, 164, 164, 0.15), 0px 0.5px 0px #C8C8C8; }
   .navbar .navbar-brand {
     font-size: 0; }
     .navbar .navbar-brand img {
@@ -75,9 +73,9 @@ input[type=number] {
     position: relative;
     color: #1F687E !important;
     font-size: 16px;
-    font-weight: bold;
     display: inline-block;
-    padding: 8px 14px !important; }
+    padding: 8px 14px !important;
+    font-weight: bold; }
     .navbar .nav-link.text-red {
       color: #EF6A82 !important; }
     .navbar .nav-link:after {
@@ -93,9 +91,17 @@ input[type=number] {
       max-width: 26px;
       transform: translateX(-50%); }
     .navbar .nav-link:hover, .navbar .nav-link.active {
-      opacity: 1; }
+      opacity: 1;
+      color: #165366; }
       .navbar .nav-link:hover:after, .navbar .nav-link.active:after {
         width: calc(100% - 50px); }
+
+.logo .blue-path, .logo .pink-path {
+  transition: 0.3s; }
+.logo:hover .blue-path {
+  transform: translate(2px, -2px); }
+.logo:hover .pink-path {
+  transform: translate(-2px, 2px); }
 
 .row-1 {
   margin-left: -8px;
@@ -110,9 +116,6 @@ input[type=number] {
 .h2, h2 {
   font-size: 40px;
   font-weight: bold; }
-
-.h2 {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
 
 .h3, h3 {
   font-size: 24px;
@@ -139,14 +142,19 @@ input[type=number] {
 .lh-1 {
   line-height: 1; }
 
+hr {
+  border-color: #EEEEF0; }
+
 .btn-sign {
   margin-left: 10px;
   background: #24997D;
   transition: 0.3s;
-  font-weight: bold; }
+  border: 0;
+  font-weight: 500; }
   .btn-sign:hover {
-    background: #24997D;
-    opacity: 0.7; }
+    background: #218C73; }
+  .btn-sign:focus {
+    box-shadow: none; }
 
 .btn-edit {
   background: #1F687E;
@@ -196,15 +204,14 @@ input[type=number] {
   display: inline-block;
   color: #1F687E;
   font-size: 18px;
-  font-weight: bold; }
+  font-weight: 600; }
   .see-all:hover {
     opacity: 1;
-    color: #1F687E;
+    color: #165366;
     transform: translateX(5px); }
 
 .see-all-2:hover {
-  transform: translateX(0);
-  opacity: 0.7; }
+  transform: translateX(0); }
 
 .a-property {
   color: #000; }
@@ -213,9 +220,11 @@ input[type=number] {
 
 .card-2 {
   height: 100%;
-  border: 1px solid #E0E0E0; }
+  border: 1px solid #E0E0E0;
+  border-radius: 8px;
+  overflow: hidden; }
   .card-2 .card-block {
-    padding: 4px 15px 32px;
+    padding: 10px 16px 32px;
     height: 100%;
     display: flex;
     flex-direction: column; }
@@ -227,13 +236,12 @@ input[type=number] {
   @media (max-width: 991.98px) {
     .footer {
       padding: 48px 0; } }
-  .footer a {
-    color: #FFF;
+  .footer .a-block a {
+    color: rgba(255, 255, 255, 0.75);
     display: inline-block;
-    opacity: 0.7;
     padding-bottom: 8px; }
-    .footer a:hover {
-      opacity: 0.4; }
+    .footer .a-block a:hover {
+      color: rgba(255, 255, 255, 0.4); }
 
 .watch-container {
   position: relative;
@@ -279,7 +287,10 @@ input[type=number] {
       background: #FFF;
       opacity: 0.7;
       transition: 0.3s; }
-    .owl-1.owl-theme .owl-dots .owl-dot.active span, .owl-1.owl-theme .owl-dots .owl-dot:hover span {
+    .owl-1.owl-theme .owl-dots .owl-dot:hover span {
+      width: 12px;
+      height: 12px; }
+    .owl-1.owl-theme .owl-dots .owl-dot.active span {
       width: 16px;
       height: 16px;
       opacity: 1; }
@@ -324,7 +335,7 @@ input[type=number] {
   border: 1px solid #E0E0E0;
   padding: 80px;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
-  border-radius: 20px; }
+  border-radius: 16px; }
   @media (max-width: 991.98px) {
     .card-signup {
       padding: 60px; } }
@@ -333,25 +344,27 @@ input[type=number] {
       padding: 40px 20px; } }
 
 .form-control {
-  padding: 8px 13px;
-  height: 45px;
+  padding: 10px 13px;
+  height: 44px;
   font-size: 18px;
+  transition: 0.3s;
   color: #888893;
-  border-color: #DCDCDC; }
+  border: 1px solid #EEEEF0; }
+  .form-control:hover {
+    background: #FCFCFC; }
   .form-control:focus {
-    border-color: #DCDCDC;
-    background-color: #FFF;
-    box-shadow: 0px 0px 8px rgba(36, 153, 125, 0.25); }
+    border-color: #B7B7BD;
+    color: #2A2A2A;
+    box-shadow: none; }
   .form-control:disabled {
+    border-color: #EEEEF0;
     color: #B7B7BD;
     background-color: #FCFCFC; }
   .form-control.error {
     border-color: #EF6A82; }
 
-.form-group-gray {
+.form-group.disabled {
   color: #B7B7BD; }
-  .form-group-gray .form-control {
-    background-color: #FCFCFC; }
 
 label.check-group {
   font-size: 18px;
@@ -377,7 +390,7 @@ label.check-group {
     transition: 0.3s; }
   label.check-group input:checked ~ div:before {
     border-color: #448FFF;
-    background-color: #448FFF; }
+    border-radius: 6px; }
 label.checkbox-group {
   padding-left: 30px; }
   label.checkbox-group div:before {
@@ -385,8 +398,11 @@ label.checkbox-group {
     width: 20px;
     height: 20px;
     border-color: #888893; }
-  label.checkbox-group input:checked ~ div:before {
-    background-image: url(../img/i-verified.svg); }
+  label.checkbox-group input:checked ~ div {
+    color: #2A2A2A; }
+    label.checkbox-group input:checked ~ div:before {
+      background-image: url(../img/check-square.svg);
+      background-size: cover; }
 
 .list-check {
   margin-bottom: 0;
@@ -420,14 +436,14 @@ label.checkbox-group {
 
 .uploader-plugin .btn-orange {
   background-color: transparent;
-  border-color: #DCDCDC !important;
+  border-color: #EEEEF0 !important;
   color: #1F687E;
   text-align: left;
   font-size: 18px;
   width: 100%;
   font-weight: 500; }
   .uploader-plugin .btn-orange:hover {
-    border-color: #1F687E !important; }
+    background: #FCFCFC; }
   .uploader-plugin .btn-orange img {
     width: 30px; }
 .uploader-plugin .fileUpload {
@@ -451,17 +467,17 @@ label.checkbox-group {
   min-height: 120px;
   min-width: 120px;
   text-align: center;
-  border-radius: 7px;
-  border: 1px solid #DCDCDC;
+  border-radius: 4px;
+  border: 1px solid #EEEEF0;
   transition: 0.3s;
   cursor: pointer; }
   .uploader label:hover {
-    border: 1px solid #1F687E; }
+    background: #FCFCFC; }
   .uploader label.file-upload {
     padding: 0;
     border: 0; }
 .uploader #start {
-  padding-top: 20px; }
+  padding: 22px 10px; }
   .uploader #start.hidden {
     display: none; }
 .uploader #response.hidden {
@@ -494,5 +510,9 @@ label.checkbox-group {
   background-position: center center;
   width: 24px;
   height: 20px; }
+
+.the-count {
+  color: #888893;
+  font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
