--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,15 @@ input[type=number] {
 .text-black {
   color: #2A2A2A !important; }
 
+.text-gray {
+  color: #66666C !important; }
+
+.text-gray-2 {
+  color: #888893; }
+
+.text-gray-3 {
+  color: #535353 !important; }
+
 .navbar {
   padding: 12px 16px;
   background-color: #FFF;
@@ -362,10 +371,20 @@ hr {
     background-color: #FCFCFC; }
   .form-control.error {
     border-color: #EF6A82; }
+    .form-control.error ~ .row .the-count {
+      color: #EF6A82; }
 
-.form-group.disabled {
-  color: #B7B7BD; }
+.form-group {
+  color: #535353; }
+  .form-group .confirmed {
+    color: #888893; }
+  .form-group.disabled {
+    color: #B7B7BD; }
+    .form-group.disabled .confirmed {
+      color: #B7B7BD; }
 
+label.error {
+  display: none !important; }
 label.check-group {
   font-size: 18px;
   display: block;
@@ -434,48 +453,97 @@ label.checkbox-group {
   padding: 10px;
   font-size: 18px; }
 
-.uploader-plugin .btn-orange {
-  background-color: transparent;
-  border-color: #EEEEF0 !important;
-  color: #1F687E;
-  text-align: left;
-  font-size: 18px;
-  width: 100%;
-  font-weight: 500; }
-  .uploader-plugin .btn-orange:hover {
-    background: #FCFCFC; }
-  .uploader-plugin .btn-orange img {
-    width: 30px; }
-.uploader-plugin .fileUpload {
+.uploader-plugin {
   position: relative;
   overflow: hidden;
-  height: 45px; }
-.uploader-plugin input.upload {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-  cursor: pointer;
-  opacity: 0;
-  filter: alpha(opacity=0); }
+  border-radius: 0.25rem;
+  transition: 0.3s; }
+  .uploader-plugin:hover {
+    background: #FCFCFC; }
+  .uploader-plugin input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    opacity: 0;
+    filter: alpha(opacity=0); }
+    .uploader-plugin input.upload.error ~ .fileUpload {
+      border-color: #EF6A82; }
+  .uploader-plugin .fileUpload {
+    padding: 6px 13px;
+    height: 44px;
+    font-size: 18px;
+    transition: 0.3s;
+    color: #1F687E;
+    border: 1px solid #EEEEF0;
+    border-radius: 0.25rem;
+    text-align: left;
+    width: 100%;
+    font-weight: 500;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 45px; }
+    .uploader-plugin .fileUpload img {
+      width: 20px; }
+  .uploader-plugin .delete-small {
+    position: absolute;
+    display: none;
+    right: 13px;
+    top: 50%;
+    width: 20px;
+    height: 20px;
+    transform: translateY(-50%);
+    transition: 0.3s; }
+    .uploader-plugin .delete-small .delete-2 {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0;
+      transition: 0.3s; }
+    .uploader-plugin .delete-small:hover .delete-2 {
+      opacity: 1; }
+    .uploader-plugin .delete-small img {
+      display: block; }
 
 .uploader label {
-  width: 100%;
   padding: 10px;
-  min-height: 120px;
-  min-width: 120px;
+  height: 120px;
+  width: 120px;
   text-align: center;
   border-radius: 4px;
   border: 1px solid #EEEEF0;
   transition: 0.3s;
-  cursor: pointer; }
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; }
   .uploader label:hover {
     background: #FCFCFC; }
   .uploader label.file-upload {
-    padding: 0;
-    border: 0; }
+    padding: 0; }
+    .uploader label.file-upload .delete-img {
+      display: block; }
+    .uploader label.file-upload:hover .delete-img {
+      opacity: 1; }
+.uploader .delete-img {
+  display: none;
+  opacity: 0;
+  background: rgba(252, 252, 252, 0.94);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+  .uploader .delete-img img {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%); }
 .uploader #start {
   padding: 22px 10px; }
   .uploader #start.hidden {
@@ -485,9 +553,8 @@ label.checkbox-group {
 .uploader #response #messages {
   display: none; }
 .uploader #file-image {
-  display: inline;
-  width: auto;
-  height: auto; }
+  margin: auto;
+  max-height: 100%; }
   .uploader #file-image.hidden {
     display: none; }
 .uploader #notimage {
@@ -498,7 +565,14 @@ label.checkbox-group {
   .uploader #notimage.hidden {
     display: none; }
 .uploader input[type="file"] {
-  display: none; }
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 0;
+  pointer-events: none; }
+  .uploader input[type="file"].error ~ label {
+    border-color: #EF6A82; }
 .uploader div {
   color: #1F687E;
   font-size: 18px; }
@@ -513,6 +587,10 @@ label.checkbox-group {
 
 .the-count {
   color: #888893;
-  font-size: 14px; }
+  font-size: 14px;
+  transition: 0.3s; }
+
+.block-company {
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
