--- a/sass/style.sass
+++ b/sass/style.sass
@@ -89,7 +89,7 @@ input
 		&::-webkit-outer-spin-button, &::-webkit-inner-spin-button
 			-webkit-appearance: none
 
-@media (min-width: 1200px)
+@media (min-width: 1260px)
 	.container 
 		max-width: 1200px
 
@@ -306,6 +306,8 @@ hr
 
 .a-property
 	color: #000
+	span 
+		display: inline !important
 	&:hover 
 		color: #000
 
@@ -320,6 +322,9 @@ hr
 		height: 100%
 		display: flex
 		flex-direction: column
+		@media (max-width: 330.98px)
+			padding: 10px 8px 32px
+
 	&.past
 		opacity: .5
 
@@ -488,6 +493,8 @@ label
 		line-height: 1.4
 		transition: $transition
 		color: $color-gray-2
+		@media (max-width: 575.98px)
+			font-size: $fz-16
 		div:before
 			content: ''
 			position: absolute
@@ -885,7 +892,7 @@ label
 	.bid-text-green
 		color: $color-green
 
-.block-gray
+.block-gray-img
 	width: 240px
 	height: 160px
 	border-radius: 8px
@@ -895,8 +902,15 @@ label
 	&.modal-1000
 		@media (min-width: 1200px)
 			max-width: 1000px
+	&.modal-565
+		@media (min-width: 1200px)
+			max-width: 565px
 	.modal-content 
 		border-radius: 16px
+		border: 0 
 		.card-signup
-			border: 0
-			box-shadow: none
+			box-shadow: none	
+			&.card-signup-60
+				padding: 60px
+				@media (max-width: 575.98px)
+					padding: 40px 15px
